Comments have been added indicating the changes I have made. Additionally, there have been some formatting changes with spacing and indentation that vscode automatically formatted

--- a/app/src/Monarch/Components/App.razor
+++ b/app/src/Monarch/Components/App.razor
@@ -18,6 +18,11 @@
     <HeadOutlet />
 </head>
 
+@*
+Conner Hammonds
+Routing Information
+*@
+
 <body>
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
