--- a/app/src/Monarch/Components/Pages/Admin.razor
+++ b/app/src/Monarch/Components/Pages/Admin.razor
@@ -1,3 +1,10 @@
+@*
+Conner Hammonds
+Monarch Admin Page
+ - Sample admin console page with placeholder content
+ - Not currently being used but still here in case needed later
+*@
+
 @page "/admin"
 @using Monarch.Components
 @rendermode InteractiveServer
