--- a/app/src/Monarch/Components/Pages/Profile.razor
+++ b/app/src/Monarch/Components/Pages/Profile.razor
@@ -1,3 +1,9 @@
+@*
+Conner Hammonds
+Monarch Profile Page
+ - Sample profile page with placeholder content
+*@
+
 @page "/profile"
 @using Monarch.Components
 @rendermode InteractiveServer
