--- a/app/src/Monarch/Components/Pages/Dashboard.razor
+++ b/app/src/Monarch/Components/Pages/Dashboard.razor
@@ -75,8 +75,8 @@ Monarch Dashboard Page
         try
         {
             var password = System.IO.File.ReadAllText("/run/secrets/monarch_sql_monarch_password");
-            var connectionString = $"Server=sqlserver,1433;Database=monapi;User Id=monarch;Password={password};TrustServerCertificate=True;";
-
+            var connectionString = $"Server=sqlserver,1433;Database=monapi;User Id=monarch;Password={password};Encrypt=True;TrustServerCertificate=False;";
+            
             var apps = new List<ApplicationStatus>();
 
             using (var connection = new SqlConnection(connectionString))
