cert-provider.sh: final changes to allow trust from monarch to keycloak/sql, and monapi to sql compose.yaml: client_bundle reference added to environment variables for monarch and monapi Worker.cs: bad reference to previous nrs (NewRelicSimulator) object removed, Trust by default turned off, casting issue resolved JiraManager.cs: Trust by default turned off NagiosConnector: Trust by default turned off NewRelicConnector: Secret Reference Fixed simulator.sh: Secret Reference Fixed Dashboard.razor: Casting issue resolved

--- a/app/src/Monarch/Components/Pages/Dashboard.razor
+++ b/app/src/Monarch/Components/Pages/Dashboard.razor
@@ -88,18 +88,18 @@ Monarch Dashboard Page
                 {
                     while (await reader.ReadAsync())
                     {
-                        var statusString = reader.GetString(2);
+                        var statusString = reader.GetInt32(2);
                         var statusType = statusString switch
                         {
-                            "Operational" => StatusType.Operational,
-                            "Degraded" => StatusType.DegradedPerformance,
-                            "Down" => StatusType.Outage,
+                            0 => StatusType.Operational,
+                            1 => StatusType.DegradedPerformance,
+                            2 => StatusType.Outage,
                             _ => StatusType.Unknown
                         };
 
                         apps.Add(new ApplicationStatus
                         {
-                            Id = reader.GetString(0),
+                            Id = reader.GetInt32(0).ToString(),
                             Name = reader.GetString(1),
                             Status = statusType
                         });
