--- a/app/src/Monarch/Components/NavBar.razor
+++ b/app/src/Monarch/Components/NavBar.razor
@@ -12,7 +12,12 @@
         </div>
 
         <div class="navbar-right">
-            <button href="/admin" class="icon-btn console-btn" title="Admin Console" aria-label="Admin Console" @onclick="ToggleAdmin">
+            @*(<button class="icon-btn" title="Add Application" aria-label="Add Application">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M 25 2 C 12.309295 2 2 12.309295 2 25 C 2 37.690705 12.309295 48 25 48 C 37.690705 48 48 37.690705 48 25 C 48 12.309295 37.690705 2 25 2 z M 25 4 C 36.609824 4 46 13.390176 46 25 C 46 36.609824 36.609824 46 25 46 C 13.390176 46 4 36.609824 4 25 C 4 13.390176 13.390176 4 25 4 z M 24 13 L 24 24 L 13 24 L 13 26 L 24 26 L 24 37 L 26 37 L 26 26 L 37 26 L 37 24 L 26 24 L 26 13 L 24 13 z"/>
+                </svg>
+            </button>*@
+            <button class="icon-btn console-btn" title="Admin Console" aria-label="Admin Console" @onclick="ToggleAdmin">
                 <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
                     <path
                         d="M20 3H4c-1.11 0-2 .89-2 2v11c0 1.11.89 2 2 2h3v2h10v-2h3c1.11 0 2-.89 2-2V5c0-1.11-.89-2-2-2zm0 13H4V5h16v11zm-2-9H6v2h12V7zm0 4H6v2h12v-2z" />
