--- a/app/src/Monarch/Components/Pages/Dashboard.razor
+++ b/app/src/Monarch/Components/Pages/Dashboard.razor
@@ -8,7 +8,7 @@ Monarch Dashboard Page
 
 @page "/"
 @using Monarch.Models
-@using System.Data.SqlClient
+@using Microsoft.Data.SqlClient
 @rendermode InteractiveServer
 
 <PageTitle>Monarch</PageTitle>
